fix(grid): col header width adjust on smaller than default col

--- a/src/ui/mixins.scss
+++ b/src/ui/mixins.scss
@@ -20,7 +20,7 @@
   padding: 6px;
   border-right: 1px solid $borderColor;
   border-bottom: 1px solid $borderColor;
-  min-width: $columnWidth;
+  /* min-width: $columnWidth; */
   min-height: $columnHeight;
 }
 
